fix bug to ensure too long names won't get more chances

--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,7 @@ ul {
 .fancy .slot li {
     width: 100%;
     line-height: calc(0.07*100vh);
+    max-height: calc(0.07*100vh);
     text-align: center;
     font-size: calc(0.06*100vh);
     font-weight: bold;
